# memjs

./: .gitignore  Cargo.toml  README.md  asm.js  build.js  index.js  package-lock.json  package.json  test.js  tsconfig.json
lib/: core.d.ts  core.js  index.ts  types.d.ts  types.ts
memjs/: asm.ts  core.d.ts  index.ts
src/: lib.rs  mem.rs
src/mem/: sig.rs
