[package]
name = "memjs"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skidscan = "2.0.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", 'channel-api', 'promise-api', 'task-api']

[dependencies.winapi]
version = "0.3.9"
features = [
   'tlhelp32','minwindef', 'memoryapi','processthreadsapi', 'handleapi'
]

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]